--- a/index.html
+++ b/index.html
@@ -4,11 +4,57 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" /> 
     <link href="assets/css/styles.css" rel="stylesheet">
     <title>Kaneli Photo Studio</title>
 </head>
 <body>
-    <h1>Project Management</h1>
+    <div class="container">
+        <div class="panel active" style="background-image: url(assets/img/pietro.jpg)" >
+            <h3>Sun kissed.</h3>
+        </div>
+
+        <div class="panel" style="background-image: url(assets/img/gerson2.jpg)" >
+            <h3>Noraml day, normal road</h3>
+        </div>
+
+        <div class="panel" style="background-image: url(assets/img/gerson.jpg)" >
+            <h3>Race with fire on fire</h3>
+        </div>
+
+        <div class="panel" style="background-image: url(assets/img/geran.jpg)" >
+            <h3>Get lost inthe forest</h3>
+        </div>
+
+        <div class="panel" style="background-image: url(assets/img/benjamin.jpg)" >
+            <h3>Camp, Drive and Tan</h3>
+        </div>
     
+        <div class="panel" style="background-image: url(assets/img/hassan.jpg)" >
+            <h3>High stakes, Dangerous fun</h3>
+        </div>
+
+        <div class="panel" style="background-image: url(assets/img/markus.jpg)" >
+            <h3>Let it snow</h3>
+        </div>
+
+        <div class="panel" style="background-image: url(assets/img/mudassir.jpg)" >
+            <h3>Above the beach, below the forest</h3>
+        </div>
+
+        <div class="panel" style="background-image: url(assets/img/ryan.jpg)" >
+            <h3>Sweet Snow Sun Serenity</h3>
+        </div>
+
+        <div class="panel" style="background-image: url(assets/img/scott.jpg)" >
+            <h3>Stick like Thailand, Move like Hawaaii</h3>
+        </div>
+
+        <div class="panel" style="background-image: url(assets/img/stephen.jpg)" >
+            <h3>For the love of Danger!</h3>
+        </div>
+    </div>
+
+    <script src="assets/js/main.js" ></script>
 </body>
 </html>
