--- a/index.html
+++ b/index.html
@@ -9,52 +9,55 @@
     <title>Kaneli Photo Studio</title>
 </head>
 <body>
-    <div class="container">
-        <div class="panel active" style="background-image: url(assets/img/pietro.jpg)" >
-            <h3>Sun kissed.</h3>
-        </div>
+    <h2>Kaneli Studio Samples</h2>
+    <p>Select card to expand!</p>
+    <section>
+        <div class="container">
+            <div class="panel active" style="background-image: url(assets/img/pietro.jpg)" >
+                <h3>Sun kissed.</h3>
+            </div>
 
-        <div class="panel" style="background-image: url(assets/img/gerson2.jpg)" >
-            <h3>Noraml day, normal road</h3>
-        </div>
+            <div class="panel" style="background-image: url(assets/img/gerson2.jpg)" >
+                <h3>Noraml day, normal road</h3>
+            </div>
 
-        <div class="panel" style="background-image: url(assets/img/gerson.jpg)" >
-            <h3>Race with fire on fire</h3>
-        </div>
+            <div class="panel" style="background-image: url(assets/img/gerson.jpg)" >
+                <h3>Race with fire on fire</h3>
+            </div>
 
-        <div class="panel" style="background-image: url(assets/img/geran.jpg)" >
-            <h3>Get lost inthe forest</h3>
-        </div>
+            <div class="panel" style="background-image: url(assets/img/geran.jpg)" >
+                <h3>Get lost inthe forest</h3>
+            </div>
 
-        <div class="panel" style="background-image: url(assets/img/benjamin.jpg)" >
-            <h3>Camp, Drive and Tan</h3>
-        </div>
-    
-        <div class="panel" style="background-image: url(assets/img/hassan.jpg)" >
-            <h3>High stakes, Dangerous fun</h3>
-        </div>
+            <div class="panel" style="background-image: url(assets/img/benjamin.jpg)" >
+                <h3>Camp, Drive and Tan</h3>
+            </div>
+        
+            <div class="panel" style="background-image: url(assets/img/hassan.jpg)" >
+                <h3>High stakes, Dangerous fun</h3>
+            </div>
 
-        <div class="panel" style="background-image: url(assets/img/markus.jpg)" >
-            <h3>Let it snow</h3>
-        </div>
+            <div class="panel" style="background-image: url(assets/img/markus.jpg)" >
+                <h3>Let it snow</h3>
+            </div>
 
-        <div class="panel" style="background-image: url(assets/img/mudassir.jpg)" >
-            <h3>Above the beach, below the forest</h3>
-        </div>
+            <div class="panel" style="background-image: url(assets/img/mudassir.jpg)" >
+                <h3>Above the beach, below the forest</h3>
+            </div>
 
-        <div class="panel" style="background-image: url(assets/img/ryan.jpg)" >
-            <h3>Sweet Snow Sun Serenity</h3>
-        </div>
+            <div class="panel" style="background-image: url(assets/img/ryan.jpg)" >
+                <h3>Sweet Snow Sun Serenity</h3>
+            </div>
 
-        <div class="panel" style="background-image: url(assets/img/scott.jpg)" >
-            <h3>Stick like Thailand, Move like Hawaaii</h3>
-        </div>
+            <div class="panel" style="background-image: url(assets/img/scott.jpg)" >
+                <h3>Stick like Thailand, Move like Hawaaii</h3>
+            </div>
 
-        <div class="panel" style="background-image: url(assets/img/stephen.jpg)" >
-            <h3>For the love of Danger!</h3>
+            <div class="panel" style="background-image: url(assets/img/stephen.jpg)" >
+                <h3>For the love of Danger!</h3>
+            </div>
         </div>
-    </div>
-
+    </section>
     <script src="assets/js/main.js" ></script>
 </body>
 </html>
